# chat-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/backend/: services.py  utils.py
