[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Oribe Abad <oribe@insaite.io>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
voluptuous = "^0.11.7"
rethinkdb = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
